# magna-scraper

./: .gitignore  .gitmessage  README.md  copy_by_company.py  docker-compose.yml  pyproject.toml  test_extract_timeout.py
data/: magna_entities.json  ta125.json  ta125_magna.json  ta125_remaining.json
data/qdrant/: raft_state.json
misc/: magna-forms
specs/: SPEC.md  digestion-pipeline.md
src/: app.py  config.py  db.py  db_v2.py  downloader.py  embedder.py  extractor.py  models.py  scraper.py  search.py
src/api/: deps.py  main.py
src/api/routes/: pipeline.py  reports.py  search.py
src/pipeline/: downloader.py  extractor.py  form_configs.py  indexer.py  orchestrator.py  parser.py  scraper.py
tests/: test_extractor.py  test_indexer.py  test_magna_entity_resolver.py
tools/: __init__.py
